reports and edit

--- a/views/public/html/add-candidate.html
+++ b/views/public/html/add-candidate.html
@@ -1176,6 +1176,8 @@
                                               <label for="candidate_c_mobi2">Mobile</label>
                                           </div>
                                       </div>
+
+                                      
                                   </div>
                               </div>
                               
@@ -1196,7 +1198,19 @@
                                     </div>
                                 </div>
                            
-                                
+                                <div class="col">
+                                  <div class="form-floating">
+                                      <input
+                                          type="text"
+                                          class="form-control"
+                                          id="candidate_p_mobi1"
+                                          placeholder="Field X"
+                                          aria-describedby="fieldX_1_Help"
+                                          
+                                      />
+                                      <label for="candidate_p_mobi1">Other Mobile</label>
+                                  </div>
+                              </div>
         
                                 <div class="col-md-6 ">
                                     <div class="form-floating">
@@ -1243,7 +1257,6 @@
         <input type="hidden" placeholder="Enter candidate p ad2" id="candidate_p_ad2" required>
         <input type="hidden" placeholder="Enter candidate p country" id="candidate_p_country" required>
     
-        <input type="hidden" placeholder="Enter candidate p mobi1" id="candidate_p_mobi1" required>    
         <input type="hidden" placeholder="Enter candidate p mobi2" id="candidate_p_mobi2" required>    
         <input type="hidden" placeholder="Enter candidate p rank" id="candidate_p_rank" required>    
         <input type="hidden" placeholder="Enter candidate p tel1" id="candidate_p_tel1" required>    
