--- a/views/public/html/edit-candidate-2.html
+++ b/views/public/html/edit-candidate-2.html
@@ -1055,7 +1055,7 @@
                                         aria-describedby="fieldX_1_Help"
                                         
                                     />
-                                    <label for="edit_candidate_c_ad1">Address</label>
+                                    <label for="edit_candidate_c_ad1">Primary Address</label>
                                 </div>
                             </div>
     
@@ -1069,7 +1069,7 @@
                                         aria-describedby="fieldX_2_Help"
                                         
                                     />
-                                    <label for="edit_candidate_c_ad2">Address</label>
+                                    <label for="edit_candidate_c_ad2">Secondary Address</label>
                                 </div>
                             </div>
                         </div>
@@ -1086,40 +1086,43 @@
                                         aria-describedby="fieldX_1_Help"
                                         
                                     />
-                                    <label for="edit_candidate_city">City</label>
+                                    <label for="edit_candidate_city">Primary City</label>
                                 </div>
                             </div>
-    
                             <div class="col-md-6 mb-0">
-                                <div class="form-floating">
-                                    <input
-                                        type="text"
-                                        class="form-control"
-                                        id="edit_candidate_c_state"
-                                        placeholder="Field X"
-                                        aria-describedby="fieldX_2_Help"
-                                        
-                                    />
-                                    <label for="edit_candidate_c_state">State</label>
-                                </div>
-                            </div>
+                              <div class="form-floating">
+                                  <input
+                                      type="text"
+                                      class="form-control"
+                                      id="edit_candidate_p_city"
+                                      placeholder="Field X"
+                                      aria-describedby="fieldX_1_Help"
+                                      
+                                  />
+                                  <label for="edit_candidate_p_city">Alternate City</label>
+                              </div>
+                          </div>
+    
+                            
                         </div>
                     </div>
                     <div class="card-body pb-0">
                         <div class="row">
+                            
+
                             <div class="col-md-6 mb-0">
-                                <div class="form-floating">
-                                    <input
-                                        type="text"
-                                        class="form-control"
-                                        id="edit_candidate_p_city"
-                                        placeholder="Field X"
-                                        aria-describedby="fieldX_1_Help"
-                                        
-                                    />
-                                    <label for="edit_candidate_p_city">City</label>
-                                </div>
-                            </div>
+                              <div class="form-floating">
+                                  <input
+                                      type="text"
+                                      class="form-control"
+                                      id="edit_candidate_c_state"
+                                      placeholder="Field X"
+                                      aria-describedby="fieldX_2_Help"
+                                      
+                                  />
+                                  <label for="edit_candidate_c_state">Primary State</label>
+                              </div>
+                          </div>
     
                             <div class="col-md-6 mb-0">
                                 <div class="form-floating">
@@ -1131,7 +1134,7 @@
                                         aria-describedby="fieldX_2_Help"
                                         
                                     />
-                                    <label for="edit_candidate_p_state">State</label>
+                                    <label for="edit_candidate_p_state">Alternate State</label>
                                 </div>
                             </div>
                         </div>
@@ -1148,7 +1151,7 @@
                                         aria-describedby="fieldX_1_Help"
                                         
                                     />
-                                    <label for="edit_candidate_pin">Pincode</label>
+                                    <label for="edit_candidate_pin">Primary Pincode</label>
                                 </div>
                             </div>
     
@@ -1162,7 +1165,7 @@
                                         aria-describedby="fieldX_2_Help"
                                         
                                     />
-                                    <label for="edit_candidate_p_pin">Pincode</label>
+                                    <label for="edit_candidate_p_pin">Secondary Pincode</label>
                                 </div>
                             </div>
                         </div>
@@ -1179,7 +1182,7 @@
                                         aria-describedby="fieldX_1_Help"
                                         
                                     />
-                                    <label for="edit_candidate_c_mobi1">Mobile</label>
+                                    <label for="edit_candidate_c_mobi1">Primary Mobile</label>
                                 </div>
                             </div>
     
@@ -1193,9 +1196,22 @@
                                         aria-describedby="fieldX_2_Help"
                                         
                                     />
-                                    <label for="edit_candidate_c_mobi2">Mobile</label>
+                                    <label for="edit_candidate_c_mobi2"> Secondary Mobile</label>
                                 </div>
                             </div>
+                            <div class="col mt-4 mb-0 pb-0">
+                              <div class="form-floating">
+                                  <input
+                                      type="text"
+                                      class="form-control"
+                                      id="edit_candidate_p_mobi1"
+                                      placeholder="other mobile"
+                                      aria-describedby="fieldX_2_Help"
+                                      
+                                  />
+                                  <label for="edit_candidate_p_mobi1">Other Mobile</label>
+                              </div>
+                          </div>
                         </div>
                     </div>
                     <div class="card-body pb-0">
@@ -1227,8 +1243,11 @@
                                     <label for="edit_candidate_c_tel2">Landline</label>
                                 </div>
                             </div>
+                           
                         </div>
                     </div>
+
+                    
                     <!-- Repeat the card-body block for each set of fields -->
     
                     <div class="card-body pb-0">
@@ -1243,7 +1262,7 @@
                                         aria-describedby="fieldX_1_Help"
                                         
                                     />
-                                    <label for="edit_candidate_email1">Email</label>
+                                    <label for="edit_candidate_email1">Primary Email</label>
                                 </div>
                             </div>
     
@@ -1257,7 +1276,7 @@
                                         aria-describedby="fieldX_2_Help"
                                         
                                     />
-                                    <label for="edit_candidate_email2">Email</label>
+                                    <label for="edit_candidate_email2">Secondary Email</label>
                                 </div>
                             </div>
                             
