--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1051,21 +1051,23 @@
                                                 <table id="bankTable" class="table table table-bordered table-striped" style="font-size: 12px;">
                                                     <thead>
                                                         <tr>
-                                                          <th scope="col" >S.no</th>
-
-                                                            <th  >Bank&nbsp;Name</th>
-                                                            <th  >Account&nbsp;Number</th>
-                                                            <th  >Branch</th>
-                                                            <th  >Bank&nbsp;Address</th>
-                                                            <th  >Beneficiary&nbsp;Address</th>
-                                                            <th  >Swift&nbsp;Code</th>
-                                                            <th >IFSC&nbsp;Code</th>
-                                                            <th  >Passbook</th>
-                                                            <th  >View&nbsp;Passbook</th>
-                                                            <th  >PAN&nbsp;number</th>
-                                                            <th  >PAN&nbsp;Card</th>
-                                                            <th  >View&nbsp;PAN&nbsp;card</th>
-                                                            <th  >Actions</th>
+                                                          <th  style="font-size: 8px;">Bank&nbsp;Name</th>
+                                                          <th  style="font-size: 8px;">Account&nbsp;Number</th>
+                                                          <th  style="font-size: 8px;">Bank&nbsp;Address</th>
+                                                          <th  style="font-size: 8px;">IFSC&nbsp;Code</th>
+                                                          <th  style="font-size: 8px;">Swift&nbsp;Code</th>
+                                                          <th  style="font-size: 8px;">Beneficiary</th>
+                                                          <th  style="font-size: 8px;">Beneficiary&nbsp;Address</th>
+                                                          <th  style="font-size: 8px;">PAN&nbsp;Number</th>
+                                                          <th style="font-size: 8px;">Passbook</th>
+                                                          <th style="font-size: 8px;">View&nbsp;Passbook</th>
+                                                          <th  style="font-size: 8px;">PAN&nbsp;Card</th>
+                                                          <th  style="font-size: 8px;">View&nbsp;PAN&nbsp;Card</th>
+                                                          <th  style="font-size: 8px;">Branch</th>
+                                                          <th  style="font-size: 8px;">Types</th>
+                                                          <th  style="font-size: 8px;">Created&nbsp;By</th>
+                                                          
+                                                          <th  style="font-size: 8px;">Actions</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody id="bankTableBody">
