--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1047,35 +1047,30 @@
                                           <h4 class="text-center  mb-0 rounded-0 shadow-none border border-dark  card p-3">Bank table</h4>
                                             <div id="pagination-controls"></div>
                                 
-                                            <div class="table-responsive">
-                                                <table id="bankTable" class="table table table-bordered table-striped" style="font-size: 12px;">
-                                                    <thead>
-                                                        <tr>
-                                                          <th  style="font-size: 8px;">S.no</th>
-                                                          <th  style="font-size: 8px;">Bank&nbsp;Name</th>
-                                                          <th  style="font-size: 8px;">Account&nbsp;Number</th>
-                                                          <th  style="font-size: 8px;">Bank&nbsp;Address</th>
-                                                          <th  style="font-size: 8px;">IFSC&nbsp;Code</th>
-                                                          <th  style="font-size: 8px;">Swift&nbsp;Code</th>
-                                                          <th  style="font-size: 8px;">Beneficiary</th>
-                                                          <th  style="font-size: 8px;">Beneficiary&nbsp;Address</th>
-                                                          <th  style="font-size: 8px;">PAN&nbsp;Number</th>
-                                                          <th style="font-size: 8px;">Passbook</th>
-                                                          <th style="font-size: 8px;">View&nbsp;Passbook</th>
-                                                          <th  style="font-size: 8px;">PAN&nbsp;Card</th>
-                                                          <th  style="font-size: 8px;">View&nbsp;PAN&nbsp;Card</th>
-                                                          <th  style="font-size: 8px;">Branch</th>
-                                                          <th  style="font-size: 8px;">Types</th>
-                                                          <th  style="font-size: 8px;">Created&nbsp;By</th>
-                                                          
-                                                          <th  style="font-size: 8px;">Actions</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody id="bankTableBody">
-                    
-                                                    </tbody>
-                                                </table>
-                                            </div>
+                                            <div class="container mt-5">
+                                              <div class="row">
+                                                  <div class="col-md-6">
+                                                      <div class="card mb-3">
+                                                          <div class="card-header" style="font-size: 12px;">General Bank Profile</div>
+                                                          <div class="card-body" style="font-size: 12px;">
+                                                              <ul class="list-unstyled" id="general-bank-list">
+                                                                  <!-- General Bank details will be appended here -->
+                                                              </ul>
+                                                          </div>
+                                                      </div>
+                                                  </div>
+                                                  <div class="col-md-6">
+                                                      <div class="card mb-3">
+                                                          <div class="card-header" style="font-size: 12px;">NRI Bank Profile</div>
+                                                          <div class="card-body" style="font-size: 12px;">
+                                                              <ul class="list-unstyled" id="nri-bank-list">
+                                                                  <!-- NRI Bank details will be appended here -->
+                                                              </ul>
+                                                          </div>
+                                                      </div>
+                                                  </div>
+                                              </div>
+                                          </div>
                                             
                                         </div>
                                     </div>
