--- a/views/public/html/add-vendor.html
+++ b/views/public/html/add-vendor.html
@@ -671,13 +671,15 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4" style="visibility: hidden;">
-                      <div class="mb-3 row">
-                          <label for="user_vendor" class="col-md-4 col-form-label">Vendor:</label>
-                          <div class="col-md-8">
-                              <select class="form-select" id="user_vendor" >
-                                  <option value=""></option>
-                              </select>
+                    <div class="container mt-3">
+                      <div class="col-md-4">
+                          <div class="mb-3 row">
+                              <label for="user_vendor" class="col-md-4 col-form-label">Vendor:</label>
+                              <div class="col-md-8">
+                                  <select class="form-select" id="user_vendor">
+                                      <option value="">Select Vendor</option>
+                                  </select>
+                              </div>
                           </div>
                       </div>
                   </div>
