--- a/views/public/html/edit-user.html
+++ b/views/public/html/edit-user.html
@@ -717,12 +717,12 @@
                         </div>
                     </div>
                   </div>
-                  <div class="col-md-4" style="visibility: hidden;">
-                    <div class=" row">
-                        <label for="user_vendor" class="col-md-4 col-form-label">Vendor:</label>
+                  <div class="col-md-4" >
+                    <div class="mb-3 row">
+                        <label for="user_vendor" class="col-md-4 col-form-label">Client:</label>
                         <div class="col-md-8">
                             <select class="form-select" id="user_vendor" >
-                              <option value="" disabled selected>-- Select Vendor --</option>
+                                <option value=""></option>
                             </select>
                         </div>
                     </div>
