--- a/views/public/html/vendorlogin.html
+++ b/views/public/html/vendorlogin.html
@@ -17,7 +17,7 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login | Nsnemo</title>
+    <title>Vendor | Nsnemo</title>
     <!-- <link rel="stylesheet" href="../staticfiles/style/assets/vendor/fonts/boxicons.css"> -->
     <link rel="icon" type="image/x-icon" href="./fav-icon.ico" />
 
@@ -150,9 +150,9 @@
                 </a>
               </div>
               <!-- /Logo -->
-              <h4 class="mb-4 text-center mt-0 me-4 pt-3" style="font-size: 25px;font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;  
-              "> </h4>
-
+              <h4 class="mb-4 text-center mt-0 me-4 pt-3 text-primary" style="font-size: 14px;  
+              ">VENDOR LOGIN</h4>
+                    
               <form id="login-form" class="mb-3" >
                 <div class="mb-3 ">
                   <input
@@ -193,12 +193,10 @@
                   <button class="btn btn-primary d-grid w-100" type="submit">Sign in</button>
                 </div>
               </form>
-              <a href="vendorlogin.html" >
-                <div class="text-center opacity-50 mb-2 mt-4"   > Redirect - Vendor Login</div>
-              </a>
+             
                
-                <a href="candidate-login.html">
-                  <div class="text-center opacity-50" > Redirect - Candidate Login</div>
+                <a href="loginpage.html">
+                  <div class="text-center opacity-50" > Redirect - User Login</div>
                 </a>
                   
                 
@@ -235,7 +233,7 @@
 
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
-    <script src ="./login.js"></script>
+    <script src ="./vendorlogin.js"></script>
     <!-- Page JS -->
     <script src="../js/script.js"></script>
     <!-- Place this tag in your head or just before your close body tag. -->
