--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -814,13 +814,15 @@
               
               <!-- /Search -->
 
-              <span style="width: 150px;" >
+              <span  >
               
                  
              
                   
-                        <a href="./profile.html" class="btn  card" >
-                      <span class="fw-semibold d-block fw-bolder text-primary p-1"  id="user_name" ></span>
+                <a href="./profile.html" class="ps-4 rounded-0" style="border-left: solid 0.5px lightgray;">
+                  <!-- Your content here -->
+    
+                                    <span class="fw-semibold  fw-bolder text-primary"  id="user_name" ></span>
                       
                       <small class="text-muted"><span id="user-group"></span></small>
                     </a>
@@ -870,6 +872,8 @@
                     <div class="d-flex justify-content-between p-2 ps-4 pe-4">
                                               <span><a href="./birthday.html">Birthdays</a></span>
                     <span><a href="./reminder-document.html">Renewals</a></span>
+                    <span><a href="./contract-due.html">Dues</a></span>
+
                     <span><a href="./reminder.html">Reminders</a></span>
                     <span><a href="./availableCandidates.html">Available Candidates</a></span>
                     <span><a href="./reportsAll.html">Export All</a></span>
