--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -872,7 +872,7 @@
                     <div class="d-flex justify-content-between p-2 ps-4 pe-4">
                                               <span><a href="./birthday.html">Birthdays</a></span>
                     <span><a href="./reminder-document.html">Renewals</a></span>
-                    <span><a href="./contract-due.html">Dues</a></span>
+                    <span><a href="./contract-due.html">Contract Dues</a></span>
 
                     <span><a href="./reminder.html">Reminders</a></span>
                     <span><a href="./availableCandidates.html">Available Candidates</a></span>
